; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_preparse.c_vlc_playlist_AutoPreparse.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_preparse.c_vlc_playlist_AutoPreparse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_playlist_AutoPreparse(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @input_item_IsPreparsed(i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %9
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @vlc_playlist_Preparse(%struct.TYPE_4__* %14, i32* %15)
  br label %17

17:                                               ; preds = %13, %9, %2
  ret void
}

declare dso_local i32 @input_item_IsPreparsed(i32*) #1

declare dso_local i32 @vlc_playlist_Preparse(%struct.TYPE_4__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
